--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.21",
     "esbuild-plugin-react-virtualized": "^1.0.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
     "vite": "^5.3.1",
     "vite-plugin-css-injected-by-js": "^3.5.1",
