Update deploy and web title

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "react-hono"
+name = "audius-community"
 pages_build_output_dir = "./dist"
 compatibility_flags = [ "nodejs_compat_v2" ]
 compatibility_date = "2024-08-23"
