--- a/.github/ISSUE_TEMPLATE/audius-community-listing.yml
+++ b/.github/ISSUE_TEMPLATE/audius-community-listing.yml
@@ -12,7 +12,7 @@ body:
 
         Criteria:
         * Project must be open source
-        * Project must be built on the Audius protocol
+        * Project must be built on the Open Audio Protocol
         * Show developer badges where possible
 
   - type: input
